--- a/common-roles/create-cluster/tasks/main.yml
+++ b/common-roles/create-cluster/tasks/main.yml
@@ -29,6 +29,14 @@
         body: '"{\"networking\": {\"networkType\": \"{{ cluster_sdn | default("OVNKubernetes") }}\"}}"'
         body_format: json
         status_code: 201
+
+    - name: Set the machine cidr
+      uri:
+        url: "{{ ai_url }}/api/assisted-install/v1/clusters/{{ cluster_id.stdout }}"
+        method: PATCH
+        body: "{\"machine_network_cidr\": \"10.1.190.0/24\"}"
+        body_format: json
+        status_code: 201
   environment:
     AI_URL: "{{ ai_url }}"
 
